tests/baselines/reference/voidArrayLit.errors.txt
==== tests/cases/compiler/voidArrayLit.ts (2 errors) ====
    var va = [(() => {})()]; // ok
    (() => {})(); // ok
    function foo(s:string) {}
    foo((()=>{})()); // error
    ~~~
!!! error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Could not apply type 'string' to argument 1 which is of type 'void'.
    ~~~
!!! error TS2087: Could not select overload for 'call' expression.
    